--- a/ADTi_DIN_Reto_CRUD/src/view/AdminWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/AdminWindow.fxml
@@ -58,8 +58,8 @@
             <TextField fx:id="usernameTextField" editable="false" layoutX="32.0" layoutY="76.0" prefHeight="25.0" prefWidth="286.0" promptText="exampleuser" />
             <TextField fx:id="emailTextField" editable="false" layoutX="32.0" layoutY="107.0" prefHeight="25.0" prefWidth="286.0" promptText="example@email.com" />
             <TextField fx:id="nameTextField" layoutX="32.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="name" />
-            <TextField fx:id="surnameTextField" layoutX="190.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="surname" />
-            <TextField fx:id="phoneTextField" layoutX="32.0" layoutY="200.0" prefHeight="25.0" prefWidth="286.0" promptText="688 88 88 88" />
+            <TextField fx:id="lastnameTextField" layoutX="190.0" layoutY="169.0" prefHeight="25.0" prefWidth="128.0" promptText="lastname" />
+            <TextField fx:id="telephoneTextField" layoutX="32.0" layoutY="200.0" prefHeight="25.0" prefWidth="286.0" promptText="688 88 88 88" />
             <PasswordField fx:id="passwordPasswordField" layoutX="32.0" layoutY="138.0" prefHeight="25.0" prefWidth="286.0" promptText="· · · · · · · ·" />
             <RadioButton fx:id="maleRadioButton" layoutX="34.0" layoutY="233.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="91.0" text="MALE">
                <toggleGroup>
@@ -72,7 +72,7 @@
             <TextField fx:id="cardNumber3TextField" alignment="CENTER" layoutX="183.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
             <TextField fx:id="cardNumber4TextField" alignment="CENTER" layoutX="259.0" layoutY="261.0" prefHeight="25.0" prefWidth="59.0" promptText="0000" />
             <Button fx:id="deleteUserBttn" layoutX="41.0" layoutY="316.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="DELETE USER" />
-            <Button fx:id="saveChangesBttn" layoutX="209.0" layoutY="316.0" mnemonicParsing="false" style="-fx-background-radius: 10px;" text="SAVE CHANGES" />
+            <Button fx:id="saveChangesBttn" layoutX="209.0" layoutY="316.0" mnemonicParsing="false" onAction="#saveChanges" style="-fx-background-radius: 10px;" text="SAVE CHANGES" />
             <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="151.0" layoutY="6.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
                <font>
                   <Font name="System Italic" size="12.0" />
