--- a/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
+++ b/ADTi_DIN_Reto_CRUD/src/view/VerifyActionWindow.fxml
@@ -7,33 +7,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerifyActionWindowController">
+<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerifyActionWindowController">
     <children>
-      <Pane fx:id="rightPane" prefHeight="180.0" prefWidth="470.0" style="-fx-background-color: EEEEEE;">
+      <Pane fx:id="rightPane" prefHeight="200.0" prefWidth="500.0" style="-fx-background-color: EEEEEE;">
          <children>
-            <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="335.0" layoutY="2.0" prefHeight="25.0" prefWidth="121.0" text="username" textAlignment="CENTER" textFill="#000066">
-               <font>
-                  <Font name="System Italic" size="12.0" />
-               </font>
-            </Label>
-            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="39.0" prefHeight="25.0" prefWidth="450.0" text="ARE YOU SURE YOU WANT TO DELETE THE PORFILE">
+            <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="25.0" prefWidth="480.0" text="ARE YOU SURE YOU WANT TO DELETE THE PORFILE?">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <Label fx:id="textLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="65.0" prefHeight="51.0" prefWidth="450.0" text="This action is ireversible. The profile and its data will be deleted forever and it will not be able to restore it." textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
+            <Label fx:id="textLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="75.0" prefHeight="51.0" prefWidth="480.0" text="This action is ireversible. The profile and its data will be deleted forever and it will not be able to restore it." textAlignment="CENTER" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Button fx:id="confirmBttn" layoutX="82.0" layoutY="127.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CONFIRM">
+            <Button fx:id="confirmBttn" layoutX="55.0" layoutY="142.0" mnemonicParsing="false" onAction="#confirmButton" prefHeight="30.0" prefWidth="168.0" style="-fx-background-radius: 20px;" text="CONFIRM">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor></Button>
-            <Button fx:id="cancelBttn" layoutX="285.0" layoutY="127.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="25.0" prefWidth="100.0" style="-fx-background-radius: 10px;" text="CANCEL">
+               </cursor>
+            </Button>
+            <Button fx:id="cancelBttn" layoutX="274.0" layoutY="142.0" mnemonicParsing="false" onAction="#cancelButton" prefHeight="30.0" prefWidth="168.0" style="-fx-background-radius: 20px;" text="CANCEL">
                <cursor>
                   <Cursor fx:constant="HAND" />
-               </cursor></Button>
+               </cursor>
+            </Button>
+            <Label fx:id="username" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="10.0" layoutY="1.0" prefHeight="25.0" prefWidth="480.0" text="username" textAlignment="CENTER" textFill="#000066">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
     </children>
